# rurl

./: .gitignore  Cargo.toml  README.md  rurl-linux-amd64  rurl-macos-arm64
src/: lib.rs  main.rs
src/api/: mod.rs
src/core/: downloader.rs  limiter.rs  mod.rs  scheduler.rs  types.rs  worker.rs
src/storage/: mod.rs
tests/: integration.rs
