[package]
name = "rurl"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls", "socks", "gzip", "brotli", "deflate"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
bytes = "1.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
governor = { version = "0.6", features = ["std", "jitter"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
dashmap = "5.5" # Concurrent map for registry
parking_lot = "0.12"
bincode = "1.3" # For binary metadata storage if needed, or just use JSON
clap = { version = "4.5.56", features = ["derive"] }
indicatif = "0.18.3"
md5 = "0.8.0"
sha1 = "0.10.6"
urlencoding = "2.1"
vc-ltl = "5.3.1"
